--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+     <h1>Javascript Console Assaignment</h1>
     <script src="script.js"></script>
 </body>
 </html>
